@@ -1,6 +1,258 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
+	<defaultcontrol always="true">9000</defaultcontrol>
+	<include>dialogeffect</include>
 	<controls>
-		<!-- ADDED BY GADE! -->
+		<control type="group">
+			<left>88.5</left>
+			<top>57</top>
+			<control type="image">
+				<description>background image</description>
+				<width>1103</width>
+				<height>606</height>
+				<texture border="50,100,50,50">dialogs/Dialog.png</texture>
+			</control>
+			<control type="label">
+				<description>heading label</description>
+				<left>50</left>
+				<top>50</top>
+				<width>1003</width>
+				<height>30</height>
+				<align>center</align>
+				<aligny>center</aligny>
+				<font>font16</font>
+				<label>29900</label>
+				<textcolor>orange</textcolor>
+			</control>
+			<control type="grouplist">
+				<left>50</left>
+				<top>100</top>
+				<orientation>vertical</orientation>
+				<itemgap>0</itemgap>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+			</control>
+			<control type="grouplist">
+				<left>553</left>
+				<top>100</top>
+				<orientation>vertical</orientation>
+				<itemgap>0</itemgap>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+				<control type="image">
+					<width>500</width>
+					<height>45</height>
+					<texture border="10">buttons/list-nofocus.png</texture>
+				</control>
+			</control>
+			<control type="list" id="9001">
+				<left>60</left>
+				<top>100</top>
+				<itemlayout height="45">
+					<include>RDSContent</include>
+				</itemlayout>
+				<focusedlayout height="45">
+					<include>RDSContent</include>
+				</focusedlayout>
+				<content>
+					<item id="1">
+						<description>Composer</description>
+						<label>$LOCALIZE[29903]</label>
+						<label2>$INFO[RDS.Composer]</label2>
+						<visible>!String.IsEmpty(RDS.Composer)</visible>
+					</item>
+					<item id="2">
+						<description>Artist</description>
+						<label>$LOCALIZE[557]</label>
+						<label2>$INFO[RDS.Artist]</label2>
+						<visible>!String.IsEmpty(RDS.Artist)</visible>
+					</item>
+					<item id="3">
+						<description>Band</description>
+						<label>$LOCALIZE[29901]</label>
+						<label2>$INFO[RDS.Band]</label2>
+						<visible>!String.IsEmpty(RDS.Band)</visible>
+					</item>
+					<item id="4">
+						<description>Title</description>
+						<label>$LOCALIZE[556]</label>
+						<label2>$INFO[RDS.Title]</label2>
+					</item>
+					<item id="5">
+						<description>Album</description>
+						<label>$LOCALIZE[558]</label>
+						<label2>$INFO[RDS.Album]</label2>
+						<visible>!String.IsEmpty(RDS.Album)</visible>
+					</item>
+					<item id="5">
+						<description>Conductor</description>
+						<label>$LOCALIZE[29905]</label>
+						<label2>$INFO[RDS.Conductor]</label2>
+						<visible>!String.IsEmpty(RDS.Conductor)</visible>
+					</item>
+					<item id="6">
+						<description>Comment</description>
+						<label>$LOCALIZE[569]</label>
+						<label2>$INFO[RDS.Comment]</label2>
+						<visible>!String.IsEmpty(RDS.Comment)</visible>
+					</item>
+				</content>
+			</control>
+			<control type="list" id="9002">
+				<left>563</left>
+				<top>100</top>
+				<itemlayout height="45">
+					<include>RDSContent</include>
+				</itemlayout>
+				<focusedlayout height="45">
+					<include>RDSContent</include>
+				</focusedlayout>
+				<content>
+					<item id="1">
+						<description>Programme Style</description>
+						<label>$LOCALIZE[29902]</label>
+						<label2>$INFO[RDS.ProgStyle]</label2>
+						<visible>!String.IsEmpty(RDS.ProgStyle)</visible>
+					</item>
+					<item id="2">
+						<description>Programme Host</description>
+						<label>$LOCALIZE[29906]</label>
+						<label2>$INFO[RDS.ProgHost]</label2>
+						<visible>!String.IsEmpty(RDS.ProgHost)</visible>
+					</item>
+					<item id="3">
+						<description>Editorial Staff</description>
+						<label>$LOCALIZE[29907]</label>
+						<label2>$INFO[RDS.ProgEditStaff]</label2>
+						<visible>!String.IsEmpty(RDS.ProgEditStaff)</visible>
+					</item>
+					<item id="4">
+						<description>Phone (Studio)</description>
+						<label>$LOCALIZE[29910] ($LOCALIZE[29909])</label>
+						<label2>$INFO[RDS.PhoneStudio]</label2>
+						<visible>!String.IsEmpty(RDS.PhoneStudio)</visible>
+					</item>
+					<item id="5">
+						<description>Email (Studio)</description>
+						<label>$LOCALIZE[29911] ($LOCALIZE[29909])</label>
+						<label2>$INFO[RDS.EmailStudio]</label2>
+						<visible>!String.IsEmpty(RDS.EmailStudio)</visible>
+					</item>
+					<item id="6">
+						<description>SMS (Studio)</description>
+						<label>$LOCALIZE[29912] ($LOCALIZE[29909])</label>
+						<label2>$INFO[RDS.SMSStudio]</label2>
+						<visible>!String.IsEmpty(RDS.SMSStudio)</visible>
+					</item>
+					<item id="7">
+						<description>Phone (Hotline)</description>
+						<label>$LOCALIZE[29910] ($LOCALIZE[29913])</label>
+						<label2>$INFO[RDS.PhoneHotline]</label2>
+						<visible>!String.IsEmpty(RDS.PhoneHotline)</visible>
+					</item>
+					<item id="8">
+						<description>Email (Hotline)</description>
+						<label>$LOCALIZE[29911] ($LOCALIZE[29913])</label>
+						<label2>$INFO[RDS.EmailHotline]</label2>
+						<visible>!String.IsEmpty(RDS.EmailHotline)</visible>
+					</item>
+					<item id="9">
+						<description>Website</description>
+						<label>$LOCALIZE[29914]</label>
+						<label2>$INFO[RDS.ProgHomepage]</label2>
+						<visible>!String.IsEmpty(RDS.ProgHomepage)</visible>
+					</item>
+				</content>
+			</control>
+			<control type="button" id="9000">
+				<left>451.5</left>
+				<top>512</top>
+				<textcolor>grey2</textcolor>
+				<label>$LOCALIZE[15067]</label>
+				<include>DialogButton2CommonValues</include>
+				<onclick>PreviousMenu</onclick>
+			</control>
+		</control>
 	</controls>
 </window>
