@@ -1683,6 +1683,15 @@
 				<label>$INFO[Player.Time(hh:mm:ss)]</label>
 			</control>
 			<control type="progress">
+				<description>Progressbar cache</description>
+				<left>100</left>
+				<top>18</top>
+				<width>720</width>
+				<height>10</height>
+				<info>Player.ProgressCache</info>
+				<midtexture border="5" colordiffuse="44ffffff">progress_cache.png</midtexture>
+			</control>
+			<control type="progress">
 				<description>Progressbar</description>
 				<left>100</left>
 				<top>17</top>
@@ -2206,6 +2215,25 @@
 					<info>ListItem.Progress</info>
 				</control>
 			</focusedlayout>
+		</control>
+	</include>
+	<include name="RDSContent">
+		<control type="label">
+			<width>150</width>
+			<height>45</height>
+			<font>font12</font>
+			<align>left</align>
+			<aligny>center</aligny>
+			<textcolor>grey2</textcolor>
+			<info>ListItem.Label</info>
+		</control>
+		<control type="label">
+			<left>155</left>
+			<width>325</width>
+			<height>45</height>
+			<font>font12</font>
+			<aligny>center</aligny>
+			<info>ListItem.Label2</info>
 		</control>
 	</include>
 </includes>
